# MythEngine

./: .gitignore  LICENSE  Main.hi  Main.hs  MythEngine.cabal  README.md  cabal.project  meta_log.txt  module Sim.hs  module Types where.hs  phase11_visualize.py  phase11_visualize_save.py  phase12_interpret.py  phase13_predict.py  phase14_bridge_fix.py  phase14_normalize_bridge.py  phase14_unified.py  phase15_validate.py  phase16_consistency.py  phase17_reflective.py  phase18_stabilize.py  phase19_synthesis.py  phase20_ontological.py  phase21_synthesis.py  phase22_harmonic_integration.py  phase23_resonant_geometry.py  phase24_recursive_attractor.py  phase25_recursive_equilibrium.py  phase25_recursive_equilibrium_fixed.py  phase26_harmonic_resonance.py  phase27_temporal_forecast.py  phase28_entropy_reconcile.py  phase29.ps1  phase29_causal_reconstruction.py  phase30_temporal_stability.py  requirements.txt
data/: log.csv  metrics.csv  phase11_summary.csv  phase12_summary.csv  phase13_predictions.csv  phase13_predictions_corrected.csv  phase14_continuity.csv  phase14_continuity_final.csv  phase15_validation.csv  phase16_consistency.csv  phase17_reflective.csv  phase19_projection.csv  phase20_summary.csv  phase21_genesis_field.csv  phase22_harmonics.csv  phase23_geometry_field.csv  phase24_recursive_field.csv  phase24_summary.csv  phase25_equilibrium.csv  phase25_summary.csv  phase26_resonance_field.csv  phase26_summary.csv  phase27_forecast.csv  phase27_summary.csv  phase28_summary.csv  phase29_summary.csv  phase30_summary.csv
output/: metrics.csv
src/: Adaptive.hs  Lib.hs  Lib.hs.bak  Main.hs  (+9 more)
(+10 files in other folders)
