cabal-version:       >=1.10
name:                MythEngine
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:    src
  exposed-modules:   Adaptive, Lib, Metrics, Perception, Plot, Profiler, Synthesis, Verifier, Visualizer
  build-depends:
      base >=4.14 && <4.20,
      containers,
      bytestring,
      text,
      directory,
      filepath,
      mtl
  default-language:  Haskell2010

executable mythengine
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:
      base,
      MythEngine
  default-language:  Haskell2010
